# reppi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/reppi/: __init__.py  base.py  exceptions.py
src/reppi/dictionary/: __init__.py  ksvd.py  lc_ksvd.py
src/reppi/sparse/: __init__.py  omp.py  src.py
